Fix homepage layout (needed position relative to respect z-index)

--- a/wagtailio/static/css/pages/home.scss
+++ b/wagtailio/static/css/pages/home.scss
@@ -13,6 +13,8 @@
     .body-content {
         overflow: hidden;
 
+        position: relative; 
+
         // Edge background for desktop
         @include gridle_state( desktop ){
 
